--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,6 +69,15 @@ body {
   flex: 1 0 auto;
 }
 
+.index-board {
+    padding-bottom: 20px;
+}
+
+.information {
+    padding-bottom: 20px;
+    font-size: 20px;
+}
+
 /*-------------------------------------------------------------   Cards and their flipping       */
 
 .backside {
@@ -125,4 +134,6 @@ img {
 
 .footer {
   flex-shrink: 0;
+  padding-bottom: 10px;
+  padding-top: 10px;
 }
