--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,6 +82,8 @@ body {
 
 .backside {
     position: absolute;
+    width: calc(100% - 30px);
+    height: calc(100% - 30px);
 }
 
 .frontside,
@@ -93,12 +95,13 @@ body {
 
 .frontside {
     transform: rotateY(180deg);
+    width: 100%;
+    height: calc(100% - 30px);;
 }
 
 img {
-    width: 125px;
-    height: 125px;
-    margin: 5px;
+    width: 100%;
+    height: 100%;
 }
 
 .card:active {
@@ -112,17 +115,16 @@ img {
 
 .league-memorygame {
     background-color: transparent;
-    border: 1px solid #f1f1f1;
     perspective: 1000px;
 }
 
 .card {
-    position: relative;
-    width: 100%;
-    height: 100%;
+    margin-left: 20px;
+    margin-right: 20px;
     text-align: center;
     transition: transform 0.8s;
     transform-style: preserve-3d;
+    border-width: 0;
 }
 
 /*-------------------------------------------------------------   Footer       */
@@ -134,6 +136,5 @@ img {
 
 .footer {
   flex-shrink: 0;
-  padding-bottom: 10px;
-  padding-top: 10px;
+  
 }
