--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,6 +78,10 @@ body {
     font-size: 20px;
 }
 
+.sidebar {
+    background-color: #292928;
+}
+
 /*-------------------------------------------------------------   Cards and their flipping       */
 
 .backside {
@@ -130,32 +134,21 @@ img {
 /*-------------------------------------------------------------   Game completed modal      */
 
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  display: none; 
+  position: fixed; 
+  z-index: 1; 
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  width: 100%; 
+  height: 100%; 
+  background-color: rgba(0,0,0,0.4);
 }
 
-/* Modal Content/Box */
 .modal-content {
   background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
+  margin: 15% auto; 
   padding: 20px;
-  border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
-}
-
-/* The Close Button */
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
+  width: 80%; 
 }
 
 .close:hover,
