--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,7 +80,7 @@ body {
 
 .information {
     padding-bottom: 20px;
-    font-size: 20px;
+    font-size: 25px;
 }
 
 .sidebar {
@@ -104,8 +104,8 @@ body {
 
 .backside {
     position: absolute;
-    width: calc(100% - 30px);
-    height: calc(120% - 30px);
+    max-width: calc(100% - 30px);
+    max-height: calc(120% - 30px);
 }
 
 .frontside,
@@ -119,13 +119,13 @@ body {
 
 .frontside {
     transform: rotateY(180deg);
-    width: 100%;
-    height: calc(120% - 30px);;
+    max-width: 100%;
+    max-height: calc(120% - 30px);;
 }
 
 img {
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .card:active {
@@ -143,8 +143,8 @@ img {
 }
 
 .card {
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-left: 5px;
+    margin-right: 5px;
     text-align: center;
     transition: transform 0.8s;
     transform-style: preserve-3d;
@@ -161,6 +161,37 @@ img {
     width: 100%;
     height: 100%;
 }
+
+
+/*-------------------------------------------------------------   Easy Page    */
+
+.easy-page {
+    background-image: url('../images/backgroundeasycap.png');
+    background-repeat: round;
+    width: 100%;
+    height: 100%;
+}
+
+
+/*-------------------------------------------------------------   Medium Page    */
+
+.medium-page {
+    background-image: url('../images/backgroundmedcap.png');
+    background-repeat: round;
+    width: 100%;
+    height: 100%;
+}
+
+
+/*-------------------------------------------------------------   Hard Page    */
+
+.hard-page {
+    background-image: url('../images/backgroundhardcap.png');
+    background-repeat: round;
+    width: 100%;
+    height: 100%;
+}
+
 
 /*-------------------------------------------------------------   Game completed modal      */
 
