--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,7 +74,7 @@ body {
 }
 
 .index-board {
-    padding-bottom: 20px;
+    padding-bottom: 30px;
     padding-top: 30px;
 }
 
@@ -93,6 +93,7 @@ body {
     padding-right: 25px;
     text-align: center;
     font-size: 20px;
+    padding-top: 20px;
 }
 
 .resetbutton {
@@ -100,12 +101,16 @@ body {
     color: #292928;
 }
 
+.score {
+    font-size: 20px;
+}
+
 /*-------------------------------------------------------------   Cards and their flipping       */
 
 .backside {
     position: absolute;
-    max-width: calc(100% - 30px);
-    max-height: calc(120% - 30px);
+    width: calc(100% - 30px);
+    height: calc(120% - 30px);
 }
 
 .frontside,
@@ -119,13 +124,13 @@ body {
 
 .frontside {
     transform: rotateY(180deg);
-    max-width: 100%;
-    max-height: calc(120% - 30px);;
+    width: 100%;
+    height: calc(120% - 30px);;
 }
 
 img {
-    max-width: 100%;
-    max-height: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 .card:active {
@@ -172,6 +177,9 @@ img {
     height: 100%;
 }
 
+.easytable {
+    margin-left: 30px;
+}
 
 /*-------------------------------------------------------------   Medium Page    */
 
@@ -182,16 +190,23 @@ img {
     height: 100%;
 }
 
+.medtable {
+    margin-right: -5px;
+}
 
 /*-------------------------------------------------------------   Hard Page    */
 
 .hard-page {
-    background-image: url('../images/backgroundhardcap.png');
+    background-image: url('../images/noxusbackground.png');
     background-repeat: round;
     width: 100%;
     height: 100%;
 }
 
+.hardtable {
+    margin-left: 20px;
+    margin-right: 20px;
+}
 
 /*-------------------------------------------------------------   Game completed modal      */
 
