--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,7 +59,6 @@
 /*-------------------------------------------------------------   Body and Content       */
 
 html, body {
-  height: 100%;
   text-align: center;
   position: relative;
 }
@@ -125,7 +124,7 @@ body {
 .frontside {
     transform: rotateY(180deg);
     width: 100%;
-    height: calc(120% - 30px);;
+    height: calc(120% - 30px);
 }
 
 img {
@@ -206,6 +205,37 @@ img {
 .hardtable {
     margin-left: 20px;
     margin-right: 20px;
+}
+
+@media (max-width: 1200px) {
+    .hardtable {
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+
+    .frontside,
+    .backside {
+        height: 80px;
+    }
+    
+}
+
+@media (max-width: 1000px) {
+  .hardtable {
+    margin-left: 10px;
+    margin-right: 10px;
+    }
+
+    .frontside,
+    .backside {
+        max-height: calc(120% - 30px);
+        max-width: calc(120% - 30px);
+    }
+
+    img {
+        max-width: 100%;
+        max-height: 100%;
+    }
 }
 
 /*-------------------------------------------------------------   Game completed modal      */
