--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -180,6 +180,12 @@ img {
     margin-left: 30px;
 }
 
+@media (max-width: 500px) {
+    .easytable {
+        margin-left: 15px;
+    }
+}
+
 /*-------------------------------------------------------------   Medium Page    */
 
 .medium-page {
@@ -229,12 +235,18 @@ img {
     .frontside,
     .backside {
         max-height: calc(120% - 30px);
-        max-width: calc(120% - 30px);
     }
 
     img {
         max-width: 100%;
         max-height: 100%;
+    }
+}
+
+@media (max-width: 400px) {
+    .hardtable {
+        margin-left: 0px;
+        margin-right: 0px;
     }
 }
 
